--- a/team.html
+++ b/team.html
@@ -253,7 +253,7 @@
            <a href="vision.html"> <li> ABOUT </li></a>
             <a href="team.html"><li> OUR TEAM</li></a>
             <a href="signup.php"><li>SIGN UP</li></a>
-           <a href="hanbhaimilgae.php"> <li>ORDER NOW</li></a>
+           <a href="careers.html"> <li>Careers</li></a>
            <a href="indexx.html"> <li>ADMIN PANEL</li></a>
             </ul>
           </div>
